Adjust swagger json for api-docs, and main route to api docs
